# rec_em

./: CMakeLists.txt  README.md  build_number.cmake
include/: rec_em_version.in  rec_em_version_default.hpp
src/: rec_em.cpp
